--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ html {
     box-sizing: border-box;
     font-size: 8px;
     background: #42b883;
-    /*background: linear-gradient(45deg,  #42a5f5 0%,#478ed1 50%,#0d47a1 100%);*/
 }
 
 *, *:before, *:after {
@@ -12,7 +11,7 @@ html {
 body {
     margin:0;
     text-align: center;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Oswald', monospace;
 }
 
 .display__time-left {
@@ -21,18 +20,31 @@ body {
     margin: 0;
     color:white;
     text-shadow:4px 4px 0 rgba(0,0,0,0.05);
+    padding: 0px 50px;
 }
 
 .timer {
     display:flex;
     min-height: 100vh;
-    flex-direction: row;
+    flex-direction: column;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
 
 .timer__controls {
-    display: flex;
-    flex-direction: column;
-    max-height: 400px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    background: #42b883;
+}
+
+#custom {
+    grid-column: -1 / 1;
+}
+
+#custom input {
+    font-size: 3rem;
+    font-family: 'Oswald', monospace;
 }
 
 .timer__controls > * {
@@ -61,7 +73,7 @@ body {
     border-bottom:3px solid rgba(0,0,0,0.2);
     border-right:1px solid rgba(0,0,0,0.2);
     padding:1rem;
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Oswald', monospace;
 }
 
 .timer__button:hover,
@@ -78,7 +90,34 @@ body {
     justify-content: center;
 }
 
+.display.-overlay {
+    background: rgba(0,0,0, 0.3);
+}
+
 .display__end-time {
     font-size: 4rem;
     color:white;
+}
+
+.gif {
+    opacity: 0;
+    display: flex;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.gif.-show {
+    opacity: 1;
+}
+
+.bg {
+    /*position: relative;*/
+    /*overflow: hidden;*/
+    /*padding-top: 56.25%;*/
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: inset 0 0 0px 9999px white;
+}
+input:-webkit-autofill:focus {
+    -webkit-box-shadow:0 0 0 50px white inset;
 }
